Fix mis-alignments
# Resolution
- <div>.brand is vertical centered
- Brand name will disappear in tablet screen to give room to menus

--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -121,6 +121,7 @@
 
     .brand {
       flex: 0 1 auto;
+      align-self: center;
       display: flex;
       align-items: center;
 
@@ -177,6 +178,16 @@
         &::after {
           transform: scaleX(1);
         }
+      }
+    }
+  }
+}
+
+@include tablet {
+  .header {
+    .brand {
+      &__name {
+        display: none;
       }
     }
   }
